tests/unit/upcloud/resources/kubespray/sc/opensearch-system/prometheus-opensearch-exporter.yaml
---
# Source: prometheus-elasticsearch-exporter/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: prometheus-opensearch-exporter
  labels:
    helm.sh/chart: prometheus-elasticsearch-exporter-6.1.0
    app.kubernetes.io/name: prometheus-elasticsearch-exporter
    app.kubernetes.io/instance: prometheus-opensearch-exporter
    app.kubernetes.io/version: "v1.7.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9108
      protocol: TCP
  selector:
    app.kubernetes.io/name: prometheus-elasticsearch-exporter
    app.kubernetes.io/instance: prometheus-opensearch-exporter
---
# Source: prometheus-elasticsearch-exporter/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-opensearch-exporter
  labels:
    helm.sh/chart: prometheus-elasticsearch-exporter-6.1.0
    app.kubernetes.io/name: prometheus-elasticsearch-exporter
    app.kubernetes.io/instance: prometheus-opensearch-exporter
    app.kubernetes.io/version: "v1.7.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus-elasticsearch-exporter
      app.kubernetes.io/instance: prometheus-opensearch-exporter
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus-elasticsearch-exporter
        app.kubernetes.io/instance: prometheus-opensearch-exporter
    spec:
      serviceAccountName: default
      restartPolicy: Always
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: exporter
          env:
            - name: ES_PASSWORD
              value: "$(password)"
            - name: ES_USERNAME
              value: "$(username)"
          envFrom:
          - secretRef:
              name: opensearch-metrics-exporter-user
          image: "quay.io/prometheuscommunity/elasticsearch-exporter:v1.7.0"
          imagePullPolicy: IfNotPresent
          command: ["elasticsearch_exporter",
                    "--log.format=logfmt",
                    "--log.level=info",
                    "--es.uri=https://opensearch-master:9200",
                    "--es.all",
                    "--es.indices",
                    "--es.indices_settings",
                    "--es.indices_mappings",
                    "--es.shards",
                    "--collector.snapshots",
                    "--es.timeout=25s",
                    "--es.ssl-skip-verify",
                    "--web.listen-address=:9108",
                    "--web.telemetry-path=/metrics"]
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
          resources:
            limits:
              cpu: 30m
              memory: 300Mi
            requests:
              cpu: 15m
              memory: 30Mi
          ports:
            - containerPort: 9108
              name: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 1
            timeoutSeconds: 5
            periodSeconds: 5
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sleep", "20"]
          volumeMounts:
      volumes:
---
# Source: prometheus-elasticsearch-exporter/templates/servicemonitor.yaml
apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  name: prometheus-opensearch-exporter
  namespace: opensearch-system
  labels:
    helm.sh/chart: prometheus-elasticsearch-exporter-6.1.0
    app.kubernetes.io/name: prometheus-elasticsearch-exporter
    app.kubernetes.io/instance: prometheus-opensearch-exporter
    app.kubernetes.io/version: "v1.7.0"
    app.kubernetes.io/managed-by: Helm
spec:
  endpoints:
  - interval: 30s
    scrapeTimeout: 30s
    honorLabels: true
    port: http
    path: /metrics
    scheme: http
  jobLabel: prometheus-opensearch-exporter
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus-elasticsearch-exporter
      app.kubernetes.io/instance: prometheus-opensearch-exporter
  namespaceSelector:
    matchNames:
      - opensearch-system
  sampleLimit: 0
